[package]
name = "recloud"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# links = "./tdlib/tdjson.lib"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name="main"
path = "src/bin/main.rs"

[dependencies]
md5 = "0.7.0"
serde_json = { version = "1.0.96" }
uuid = { version = "1.3.3", features = ["v4"] }
serde = { version = "1.0.163", features = ["derive"] }
